angular material, stylezation

--- a/athusrv/src/app/app.component.html
+++ b/athusrv/src/app/app.component.html
@@ -1,1 +1,8 @@
 <router-outlet></router-outlet>
+<div>
+  <h1 style="font-weight: bold">Athus</h1>
+  <h1
+    style="font-weight: bold; color: transparent; -webkit-text-stroke-width: 1px; -webkit-text-stroke-color: black">
+    RV
+  </h1>
+</div>
