--- a/athusrv/src/global.styles.scss
+++ b/athusrv/src/global.styles.scss
@@ -1,22 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 @import "fonts/fonts.css";
-@import "reset.css";
 @import "app.style";
 @import "app.variables";
 
 html, body {
   height: 100%;
   width: 100%;
-  background: #EDF2F8;
+  background: linear-gradient(35deg, #F3F4F7, #F8F9FD);
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   overscroll-behavior: none;
   scroll-behavior: smooth;
 
-  &, *, * * {
+  *, * * {
     box-sizing: border-box;
+    margin: 0;
   }
 }
 
-body {
+body, *, * * {
   margin: 0;
 }
