--- a/athusrv/src/app.style.scss
+++ b/athusrv/src/app.style.scss
@@ -15,17 +15,17 @@ $typography: mat.define-typography-config(
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$primary: mat.define-palette(mat.$blue-palette);
-$accent: mat.define-palette(mat.$orange-palette, A200, A100, A400);
-$warn: mat.define-palette(mat.$red-palette);
+$primary-palette: mat.define-palette(mat.$orange-palette);
+$accent-palette: mat.define-palette(mat.$indigo-palette, A200, A100, A400);
+$warn-palette: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
 $theme: mat.define-light-theme((
   color: (
-    primary: $primary,
-    accent: $accent,
-    warn: $warn,
+    primary: $primary-palette,
+    accent: $accent-palette,
+    warn: $warn-palette,
   )
 ));
 
@@ -33,3 +33,7 @@ $theme: mat.define-light-theme((
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.all-component-themes($theme);
+
+$primary: mat.get-color-from-palette($primary-palette);
+$accent: mat.get-color-from-palette($accent-palette, 900);
+$warn: mat.get-color-from-palette($warn-palette);
