social media buttons with ripple effect

--- a/athusrv/src/app/components/home/social-media/social-media.component.html
+++ b/athusrv/src/app/components/home/social-media/social-media.component.html
@@ -1,4 +1,4 @@
 <div class="social-media-container">
-  <jam-icon icon="linkedin" [size]="32" [color]="color" [ngStyle]="{padding: padding + 'px'}"></jam-icon>
-  <jam-icon icon="github" [size]="32" [color]="color" [ngStyle]="{padding: padding + 'px'}"></jam-icon>
+  <jam-icon mat-ripple icon="linkedin" [size]="32" [color]="color" [ngStyle]="{padding: padding + 'px'}"></jam-icon>
+  <jam-icon mat-ripple icon="github" [size]="32" [color]="color" [ngStyle]="{padding: padding + 'px'}"></jam-icon>
 </div>
