favicon, new colors, logo

--- a/athusrv/src/app/components/common/menunav/menunav.component.html
+++ b/athusrv/src/app/components/common/menunav/menunav.component.html
@@ -1,4 +1,8 @@
 <div class="menunav-container">
+  <div class="athusrv">
+    <span class="first-name">Athus</span>
+    <span class="last-name">RV</span>
+  </div>
   <div
     *ngFor="let item of items"
     [id]="item.id"
