--- a/athusrv/src/app.style.scss
+++ b/athusrv/src/app.style.scss
@@ -15,8 +15,8 @@ $typography: mat.define-typography-config(
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$primary-palette: mat.define-palette(mat.$orange-palette);
-$accent-palette: mat.define-palette(mat.$indigo-palette, A200, A100, A400);
+$primary-palette: mat.define-palette(mat.$pink-palette, A400);
+$accent-palette: mat.define-palette(mat.$blue-palette, 700);
 $warn-palette: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
@@ -35,5 +35,5 @@ $theme: mat.define-light-theme((
 @include mat.all-component-themes($theme);
 
 $primary: mat.get-color-from-palette($primary-palette);
-$accent: mat.get-color-from-palette($accent-palette, 900);
+$accent: mat.get-color-from-palette($accent-palette);
 $warn: mat.get-color-from-palette($warn-palette);
