button for resume download

--- a/athusrv/src/app/components/home/home-presentation/home-presentation.component.html
+++ b/athusrv/src/app/components/home/home-presentation/home-presentation.component.html
@@ -4,7 +4,7 @@
   <div class="role">Sr. Software Engineering Lead</div>
   <div class="description">What do you wanna build? I'm sure you want quality, right?<br>so, make sure I'm on your team!</div>
   <div class="actions">
-    <button mat-flat-button color="primary">Get my CV</button>
+    <button mat-flat-button color="primary" (click)="onDownloadCV()">Get my CV</button>
     <button mat-flat-button>Contact me</button>
   </div>
 </div>
