new persona description

--- a/athusrv/src/app/components/home/home-presentation/home-presentation.component.html
+++ b/athusrv/src/app/components/home/home-presentation/home-presentation.component.html
@@ -2,7 +2,7 @@
   <div class="greeting">Hi, I am</div>
   <div class="name">Athus Vieira</div>
   <div class="role">Sr. Software Engineering Lead</div>
-  <div class="description">What do you wanna build? I'm sure you want quality, right?<br>so, make sure I'm on your team!</div>
+  <div class="description">A tech guru, eager to make a difference.<br>I'm who's missing in your team!</div>
   <div class="actions">
     <button mat-flat-button color="primary" (click)="onDownloadCV()">Get my CV</button>
     <button mat-flat-button>Contact me</button>
